<resources>
    <string name="app_name">First Names Meanings</string>
    <string name="logo_alt">First Names Meanings Logo</string>
    <string name="background_alt">First Names Meanings Background</string>
    <string name="card_alt">A tarot card with text on it</string>
    <string name="search_alt">Search icon</string>

    <!-- HOME -->
    <string name="home_intro_title">Choosing a name is choosing a fate!</string>
    <string name="home_intro_txt">Your first name can say a lot about your fate… What character traits are bound to it? What job will make a success of you? What influence will have your first name in your choices? Welcome in the universe of the first names and their meaning…</string>
    <string name="home_search_placeholder">Search a name…</string>
    <string name="home_card1_txt">Numbers and their meanings</string>
    <string name="home_card2_txt">Learn about your Birth Day</string>
    <string name="home_card3_txt">Calculate your Life Path</string>


    <!-- NAV -->

    <string name="navigation_settings">Settings</string>
    <string name="navigation_help">Help</string>
    <string name="navigation_RGPD">RGPD</string>
    <string name="navigation_legal">Legal</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="openDrawer" translatable="false">open_drawer</string>
    <string name="closeDrawer" translatable="false">close_drawer</string>

    <!-- CATEGORIES -->
    <string name="category_search">Search a name</string>
    <string name="category_horoscope">My Horoscope</string>
    <string name="category_compatibility">Compatibility</string>
    <string name="category_ranking">Ranking</string>
    <string name="category_numbers">Numbers</string>
    <string name="category_birth_day">Birth Day</string>
    <string name="category_life_path">Life Path</string>
    <string name="category_names">First Names</string>


    <!-- INTRO -->
    <string name="home_title">Choosing a name is choosing a fate!</string>
    <string name="home_text">Your first name can say a lot about your fate… What character traits are bound to it? What job will make a success of you? What influence will have your first name in your choices? Welcome to the universe of the first names and their meaning…</string>


    <!-- HOROSCOPE WIDGET -->
    <string name="widget_horoscope_title">Daily Horoscope</string>
    <string name="widget_horoscope_text">To search your horoscope, enter your first name below:
To subscribe to our daily horoscope newsletter, enter your email as well!</string>
    <string name="widget_horoscope_input_name">Your First Name</string>
    <string name="widget_horoscope_input_email">Your Email Address</string>
    <string name="widget_horoscope_consent">I agree to receive my horoscope newsletter daily. No-spam policy guaranteed.</string>
    <string name="widget_horoscope_btn">Get my horoscope</string>
    <string name="widget_horoscope_compulsory">* Compulsory fields</string>
    <string name="horoscope_remember">Save my name</string>
    <string name="horoscope_remember_info">By ticking this box, you won\'t have to enter your name next time. To reset this, go to Settings!</string>

    <string name="horoscope_result_title">Today\'s horoscope for</string>
    <string name="horoscope_love">Love</string>
    <string name="horoscope_money">Money</string>
    <string name="horoscope_health">Health</string>
    <string name="horoscope_lucky_number">Lucky Number</string>


    <!-- COMPATIBILITY -->
    <string name="compatibility_title">First Names Compatibility</string>
    <string name="compatibility_introduction">
        Friendship, love or passion? Test your compatibility with someone else now…
    </string>
    <string name="compatibility_widget_title">Compatibility Calculator</string>
    <string name="compatibility_widget_input_name1">First Name</string>
    <string name="compatibility_widget_input_name2">Another First Name</string>
    <string name="compatibility_widget_btn">MATCH</string>

    <string name="compatibility_result_love">Love</string>
    <string name="compatibility_result_friendship">Friendship</string>
    <string name="compatibility_result_sexuality">Sexuality</string>
    <string name="compatibility_result_complicity">Complicity</string>
    <string name="compatibility_result_fidelity">Fidelity</string>

    <!-- FIRST NAME DESCRIPTION -->
    <string name="name_gender_title">Gender</string>
    <string name="name_numbers_title">Numbers</string>
    <string name="name_nameDay_title">Name Day</string>
    <string name="name_origin_title">Origin</string>
    <string name="name_etymology_title">Etymology</string>

    <string name="name_description_be_title_f">Who is she?</string>
    <string name="name_description_do_title_f">What does she like?</string>
    <string name="name_description_love_title_f">What does she do?</string>

    <string name="name_description_be_title_m">Who is he?</string>
    <string name="name_description_do_title_m">What does he like?</string>
    <string name="name_description_love_title_m">What does he do?</string>

    <string name="name_description_be_title_p">Who are they?</string>
    <string name="name_description_do_title_p">What do they like?</string>
    <string name="name_description_love_title_p">What do they do?</string>


    <!-- RANKING -->
    <string name="ranking_title">First Name Ranking</string>
    <string name="ranking_text">Discover the 10 most popular first names from our website!</string>
    <string name="ranking_column_name">First Name</string>
    <string name="ranking_column_gender">Gender</string>
    <string name="ranking_column_origin">Origin</string>


    <!-- Settings  -->
    <string name="settings_reset_horoscope">Reset my saved name in Horoscope</string>


    <!-- CTAs TEXT -->
    <string name="cta_read_more">Read More</string>

</resources>
