<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/background"
    android:padding="@dimen/padding_regular"
    style="?android:buttonBarButtonStyle"
     >

    <TextView
        android:id="@+id/widget_horoscope_title_txtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/widget_horoscope_title"
        android:textColor="@color/black"
        android:textSize="@dimen/text_title"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/widget_horoscope_txt_txtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/widget_horoscope_title_txtView"
        app:layout_constraintBottom_toTopOf="@id/widget_horoscope_input_name"
        android:text="@string/widget_horoscope_text"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_regular"
        />

    <EditText
        android:id="@+id/widget_horoscope_input_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/widget_horoscope_txt_txtView"
        app:layout_constraintBottom_toTopOf="@id/widget_horoscope_input_email"
        android:padding="@dimen/padding_small"
        android:text="@string/widget_horoscope_input_name"
        android:textColor="@color/basic"
        android:background="@drawable/border_white_fill"
        android:autofillHints="name"
        android:inputType="textPersonName"
        />

    <EditText
        android:id="@+id/widget_horoscope_input_email"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/widget_horoscope_input_name"
        app:layout_constraintBottom_toTopOf="@id/widget_horoscope_consent_checkBox"
        android:padding="@dimen/padding_small"
        android:text="@string/widget_horoscope_input_email"
        android:textColor="@color/basic"
        android:background="@drawable/border_white_fill"
        android:autofillHints="email"
        android:inputType="textEmailAddress"
        />

    <CheckBox
        android:id="@+id/widget_horoscope_remember_checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_margin_small"
        app:layout_constraintTop_toBottomOf="@id/widget_horoscope_input_email"
        app:layout_constraintBottom_toTopOf="@id/widget_horoscope_consent_checkBox"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/horoscope_remember"
        android:textColor="@color/black"
        app:buttonTint="@color/black"
        />

    <CheckBox
        android:id="@+id/widget_horoscope_consent_checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_margin_small"
        android:layout_marginBottom="@dimen/normal_margin_small"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/widget_horoscope_remember_checkBox"
        app:layout_constraintBottom_toTopOf="@id/widget_horoscope_btn"
        android:text="@string/widget_horoscope_consent"
        android:textColor="@color/black"
        app:buttonTint="@color/black"
        />

    <Button
        android:id="@+id/widget_horoscope_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_small"
        android:layout_marginTop="@dimen/normal_margin_regular"
        android:layout_marginBottom="@dimen/normal_margin_small"
        android:background="@drawable/border_dark_purple_fill"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/widget_horoscope_consent_checkBox"
        android:text="@string/widget_horoscope_btn"
        android:textColor="@color/white"
        />


</androidx.constraintlayout.widget.ConstraintLayout>