<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="?android:buttonBarButtonStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/home_nameDay_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintBottom_toTopOf="@id/home_CTAs_ll"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/home_nameDay_title_txtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_title"
                android:textColor="@color/orange"
                android:textSize="@dimen/text_title" />

            <TextView
                android:id="@+id/home_nameDay_date_txtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_margin_regular"
                android:text="@string/home_text"
                android:textColor="@color/black" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/home_CTAs_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_nameDay_ll">

            <Button
                android:id="@+id/home_search_btn"
                style="?android:buttonBarButtonStyle"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/border_orange_fill"
                android:padding="5dp"
                android:text="@string/category_search"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_minimum" />

            <Button
                android:id="@+id/home_horoscope_btn"
                style="?android:buttonBarButtonStyle"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/border_orange_fill"
                android:padding="5dp"
                android:text="@string/category_horoscope"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_minimum" />

            <Button
                android:id="@+id/home_compatibility_btn"
                style="?android:buttonBarButtonStyle"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/border_orange_fill"
                android:padding="5dp"
                android:text="@string/category_compatibility"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_minimum" />


            <Button
                android:id="@+id/home_ranking_btn"
                style="?android:buttonBarButtonStyle"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/border_orange_fill"
                android:padding="5dp"
                android:text="@string/category_ranking"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_minimum" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>