<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/horoscope_result_title_txtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/horoscope_result_title"
        />


    <TextView
        android:id="@+id/horoscope_result_title_love_txtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/horoscope_love"
        />

    <!-- LOVE COUPLES -->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />


    </RelativeLayout>

    <!-- LOVE SINGLE -->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </RelativeLayout>

    <TextView
        android:id="@+id/horoscope_result_title_money_txtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/horoscope_money"
        />
    <!-- MONEY -->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </RelativeLayout>

    <TextView
        android:id="@+id/horoscope_result_title_health_txtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/horoscope_health"
        />

    <!-- HEALTH -->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </RelativeLayout>

    <TextView
        android:id="@+id/horoscope_result_title_number_txtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/horoscope_lucky_number"
        />

    <!-- LUCKY NUMBER -->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </RelativeLayout>

</LinearLayout>
